[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scripts/UI/winPanel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.298039, 0.294118, 1 )

[node name="winPanel" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_right = 300.0
margin_bottom = 300.0

[node name="level_name" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 84.0
size_flags_vertical = 7
text = "Level_Name"
align = 1
valign = 1

[node name="time_elapsed" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 173.0
size_flags_vertical = 7
text = "Time Elapsed = [insert time]"
align = 1
valign = 1

[node name="deathCount" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 300.0
margin_bottom = 262.0
size_flags_vertical = 7
text = "Number of Deaths = [insert deaths]"
align = 1
valign = 1

[node name="buttons" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="btn_nextLevel" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/buttons"]
margin_right = 148.0
margin_bottom = 34.0
focus_neighbour_left = NodePath("../btn_backToMenu")
focus_neighbour_right = NodePath("../btn_backToMenu")
focus_next = NodePath("../btn_backToMenu")
focus_previous = NodePath("../btn_backToMenu")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Next Level"

[node name="btn_backToMenu" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/buttons"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 34.0
focus_neighbour_left = NodePath("../btn_nextLevel")
focus_neighbour_right = NodePath("../btn_nextLevel")
focus_next = NodePath("../btn_nextLevel")
focus_previous = NodePath("../btn_nextLevel")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Return to Menu"
